<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:weightSum="120"
    android:layout_alignParentBottom="true">

<TableRow
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_weight="20"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/resultField"
        android:layout_width="0dp"
        android:layout_span="2"
        android:textSize="@dimen/text_size"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/operationField"
        android:layout_width="wrap_content"
        android:layout_span="1"
        android:textSize="@dimen/text_size"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        />

</TableRow>

<TableRow>

    <EditText
        android:id="@+id/numberField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:textColor="@color/colorAccent"
        android:layout_span="4"
        android:textSize="@dimen/text_size"/>

</TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="20">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/seven"
            android:onClick="onNumberClick"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:layout_span="1"
            android:layout_marginEnd="@dimen/marginRight"
            android:layout_marginTop="@dimen/marginRight"
            android:textSize="@dimen/text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/eight"
            android:onClick="onNumberClick"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:layout_span="1"
            android:layout_marginEnd="@dimen/marginRight"
            android:layout_marginTop="@dimen/marginRight"
            android:textSize="@dimen/text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nine"
            android:onClick="onNumberClick"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:layout_span="1"
            android:layout_marginEnd="@dimen/marginRight"
            android:layout_marginTop="@dimen/marginRight"
            android:textSize="@dimen/text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/divide"
            android:onClick="onOperationClick"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:layout_span="1"
            android:layout_marginEnd="@dimen/marginRight"
            android:layout_marginTop="@dimen/marginRight"
            android:textSize="@dimen/text_size"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="20">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/four"
            android:onClick="onNumberClick"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:layout_span="1"
            android:layout_marginEnd="@dimen/marginRight"
            android:layout_marginTop="@dimen/marginRight"
            android:textSize="@dimen/text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/five"
            android:onClick="onNumberClick"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:layout_span="1"
            android:layout_marginEnd="@dimen/marginRight"
            android:layout_marginTop="@dimen/marginRight"
            android:textSize="@dimen/text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/six"
            android:onClick="onNumberClick"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:layout_span="1"
            android:layout_marginEnd="@dimen/marginRight"
            android:layout_marginTop="@dimen/marginRight"
            android:textSize="@dimen/text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/multiply"
            android:onClick="onOperationClick"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:layout_span="1"
            android:layout_marginEnd="@dimen/marginRight"
            android:layout_marginTop="@dimen/marginRight"
            android:textSize="@dimen/text_size"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="20">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/one"
            android:onClick="onNumberClick"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:layout_span="1"
            android:layout_marginEnd="@dimen/marginRight"
            android:layout_marginTop="@dimen/marginRight"
            android:textSize="@dimen/text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/two"
            android:onClick="onNumberClick"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:layout_span="1"
            android:layout_marginEnd="@dimen/marginRight"
            android:layout_marginTop="@dimen/marginRight"
            android:textSize="@dimen/text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/three"
            android:onClick="onNumberClick"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:layout_span="1"
            android:layout_marginEnd="@dimen/marginRight"
            android:layout_marginTop="@dimen/marginRight"
            android:textSize="@dimen/text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/minus"
            android:onClick="onOperationClick"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:layout_span="1"
            android:layout_marginEnd="@dimen/marginRight"
            android:layout_marginTop="@dimen/marginRight"
            android:textSize="@dimen/text_size"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="20">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/zero"
            android:onClick="onNumberClick"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:layout_span="1"
            android:layout_marginEnd="@dimen/marginRight"
            android:layout_marginTop="@dimen/marginRight"
            android:textSize="@dimen/text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/coma"
            android:onClick="onNumberClick"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:layout_span="1"
            android:layout_marginEnd="@dimen/marginRight"
            android:layout_marginTop="@dimen/marginRight"
            android:textSize="@dimen/text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/plus"
            android:onClick="onOperationClick"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:layout_span="1"
            android:layout_marginEnd="@dimen/marginRight"
            android:layout_marginTop="@dimen/marginRight"
            android:textSize="@dimen/text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/equals"
            android:onClick="onOperationClick"
            android:background="@color/orange"
            android:textColor="@color/colorAccent"
            android:layout_span="1"
            android:layout_marginEnd="@dimen/marginRight"
            android:layout_marginTop="@dimen/marginRight"
            tools:ignore="ButtonStyle"
            android:textSize="@dimen/text_size"/>

    </TableRow>

</TableLayout>